@@ -229,6 +229,7 @@ missing-statement:			error
 zero-length-literals:			unconformable
 xml-generate-extra-phrases:		unconformable
 continue-after:				unconformable
+goto-entry:				unconformable
 
 # archaic in COBOL2002 and currently not available as dialect features:
 # 1: MOVE of alphanumeric figurative constants to numeric items
