@@ -229,6 +229,7 @@ missing-statement:			warning		# not verified yet
 zero-length-literals:			unconformable
 xml-generate-extra-phrases:		ok
 continue-after:				unconformable
+goto-entry:				unconformable
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		IBM
