@@ -503,6 +503,7 @@ test.conf: missing definitions:
 	no definition of 'zero-length-literals'
 	no definition of 'xml-generate-extra-phrases'
 	no definition of 'continue-after'
+	no definition of 'goto-entry'
 ])
 
 AT_CLEANUP
